<resources>
    <string name="app_name">Top Job App</string>
    <string name="u_text1"><![CDATA[Work & Hire]]></string>
    <string name="U_text2"><![CDATA[Find job opportunities & hire people easier than ever]]></string>
    <string name="u_button2">GET STARTED</string>
    <string name="u_text2">Opportunities near you</string>
    <string name="u_text3">Search jobs and talent available in your area</string>
    <string name="u_button3">GET STARTED</string>
    <string name="u_text4">Post Job</string>
    <string name="u_text5">With topjobs you can post jobs faster than ever before</string>
    <string name="u_button">GET STARTED</string>
    <string name="u_text7">I am a</string>
    <string name="u_button5">JOB SEEKER</string>
    <string name="u_button6">JOB PROVIDER</string>
    <string name="u_button7">Sign In</string>
    <string name="u_button8">Sign up</string>
    <string name="u_text8">Job Seeker</string>
    <string name="u_text9">Sign In As a Job seeker</string>
    <string name="U_t">Sign In</string>
    <string name="u_text10">Sign In As a Job Provider</string>
    <string name="u_text11">Job Provider</string>
    <string name="u_text12">Create an Account</string>

    <string name="age">Age</string>

    <string-array name="categories">
        <item>Computer and IT</item>
        <item>Engineer</item>
        <item>Health Care</item>
        <item>Human Resource</item>
        <item>Customer Service</item>
        <item>Business Marketing</item>
        <item>Art Fashion and Design</item>

    </string-array>



    <string-array name="j_categories">
        <item>Art Fashion &amp; Design </item>
        <item>Business &amp; Marketing</item>
        <item>Customer Services</item>
        <item>Computer &amp; IT</item>
        <item>Education</item>
        <item>Engineering</item>
        <item>Human Resources</item>
        <item>Health &amp; Care</item>
        <item>Other</item>

    </string-array>

    <string name="j_button1"><![CDATA[WORK & HIRE]]></string>
    <string name="j_button2">JOB VACANCIES</string>

</resources>