<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome_page">

    <Button
        android:id="@+id/u_button5"
        android:layout_width="309dp"
        android:layout_height="52dp"
        android:backgroundTint="#C81616"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/u_button5"
        android:textColor="#FFFFFF"
        app:cornerRadius="12dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.792" />

    <Button
        android:id="@+id/u_button6"
        android:layout_width="309dp"
        android:layout_height="52dp"
        android:backgroundTint="#C81616"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/u_button6"
        android:textColor="#FFFFFF"
        app:cornerRadius="12dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.882" />

    <TextView
        android:id="@+id/u_text7"
        android:layout_width="134dp"
        android:layout_height="40dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/u_text7"
        android:textAlignment="center"
        android:textColor="#6E0909"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263"
        app:srcCompat="@drawable/register_as" />
</androidx.constraintlayout.widget.ConstraintLayout>