<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".UserManagement_Profile.provider_sign_in_up">

    <TextView
        android:id="@+id/u_text11"
        android:layout_width="253dp"
        android:layout_height="45dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/u_text11"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <Button
        android:id="@+id/u_button7"
        android:layout_width="309dp"
        android:layout_height="52dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/u_button7"
        android:textColor="#C81616"
        app:cornerRadius="12dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.745" />

    <Button
        android:id="@+id/u_button8"
        android:layout_width="309dp"
        android:layout_height="52dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/u_button8"
        android:textColor="#C81616"
        app:cornerRadius="12dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.836" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="172dp"
        android:layout_height="225dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424"
        app:srcCompat="@drawable/up" />

</androidx.constraintlayout.widget.ConstraintLayout>