<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".on_boarding_page1">

    <ImageView
        android:id="@+id/u_imageView"
        android:layout_width="223dp"
        android:layout_height="256dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.326"
        app:srcCompat="@drawable/onboard1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="306dp"
        android:layout_height="71dp"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/U_text2"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.775" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="223dp"
        android:layout_height="45dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/u_text1"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.613" />

    <Button
        android:id="@+id/u_button2"
        android:layout_width="198dp"
        android:layout_height="50dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/u_button2"
        android:textColor="#C81616"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.515" />

</androidx.constraintlayout.widget.ConstraintLayout>